:sparkles: Implement coderabbit suggestions